--- a/homework/2021-39/e01/package.json
+++ b/homework/2021-39/e01/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "2021-39",
+  "name": "e01",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "eslint": "^7.32.0"
-  },
-  "dependencies": {},
-  "description": ""
+  "license": "ISC"
 }
